third_party/move/move-compiler-v2/tests/checking/typing/v1-signer/move_to_missing_resource.exp

Diagnostics:
error: the function takes 2 arguments but 1 were provided
  ┌─ tests/checking/typing/v1-signer/move_to_missing_resource.move:4:9
  │
4 │         move_to<R>(s)
  │         ^^^^^^^^^^^^^

error: the function takes 2 arguments but 1 were provided
   ┌─ tests/checking/typing/v1-signer/move_to_missing_resource.move:14:14
   │
14 │         () = move_to<R<bool>>(s);
   │              ^^^^^^^^^^^^^^^^^^^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   ┌─ tests/checking/typing/v1-signer/move_to_missing_resource.move:14:33
   │
14 │         () = move_to<R<bool>>(s);
   │                                 ^
